RavenDB-10081 Fix "Not on node" alignment in box

--- a/src/Raven.Studio/wwwroot/Content/css/pages/ongoing-tasks.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/ongoing-tasks.less
@@ -38,7 +38,7 @@
             font-size: 56%;
             font-weight: 700;
             text-align: center;
-            line-height: 12px;
+            line-height: 9px;
         }
     }
 }
